feat: add getLTW_content method
